
     - debian/patches/0list: Temporarily disable some other patches.
       This ChangeLog entry only exists as a placeholder, and shouldn't
       be here when we upload:

       glibc22-hppa-pthreads, glibc22-hppa-rela, ia64-perf

     - rules: memset.S works on ppc now, so stop deleting it.  Thanks 
       to Jack Howarth <howarth@fuse.net> for letting us know.

 -- Jeff Bailey <jbailey@nisa.net>  Fri, 30 Aug 2002 17:27:04 -0400

glibc (2.2.5-15) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/glibc-cvs.dpatch: Update from Glibc CVS.
    - debian/patches: Dropped applying below patches due to updating
      glibc-cvs.dpatch.
        hurd-update, hurd-ioperms, ia64-strncpy, sparc-misc, resolv-nss_dns,
        glibc-openoffice-fixes, xdr-array-security, hurd-lfs64,
        syserrlist, mathpatch
    - Fix gcc 3.1/3.2 compatibility building for glibc on ppc, with upstream
      patched by Jack Howarth <howarth@bromo.msbb.uc.edu> and
      Franz Sirl <Franz.Sirl-kernel@lauterbach.com>.
      Closes: #155606

 -- GOTO Masanori <gotom@debian.or.jp>  Sat, 17 Aug 2002 11:44:47 +0900

glibc (2.2.5-14) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/sh-sysdep.dpatch: Added the patch to compile for sh[34]
      sh[34]eb. Closes: #156273
    - debian/patches/glibc22-m68k-compat.dpatch: Newer m68k debian specific
      compatibility patch. Patched by Michael Fedrowitz <michaelf@debian.org>.
    - debian/patches/malloc-security.dpatch: Applied malloc security patch
      Patched by Wolfram Gloger <wg@malloc.de>.
    - debian/patches/alpha-build-failure.dpatch: Fix alpha build failure.

 -- GOTO Masanori <gotom@debian.or.jp>  Wed,  7 Aug 2002 20:56:54 +0900

glibc (2.2.5-13) unstable; urgency=low

  * Ben Collins
    - Last maintainer upload for me.
    - Fix double getent listing for build of libc package.
      Closes: #154133, #152866