@@ -1,4 +1,4 @@
 threads = no
 config-os = gnu-gnu
 add-ons =
-extra_config_options := --enable-libio
+NO_TEST = yes
